kubernetes/cluster/backup/borgwarehouse/borgwarehouse.yaml
# Service: BorgWarehouse
# Label: app.kubernetes.io/name: borgwarehouse
# Ingress: borg.brhd.io
---
apiVersion: v1
kind: Service
metadata:
  name: borgwarehouse
  namespace: backup
  labels:
    app.kubernetes.io/name: borgwarehouse
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: web
    - port: 30022
      targetPort: 30022
      name: ssh
  selector:
    app.kubernetes.io/name: borgwarehouse
---
apiVersion: v1
kind: Service
metadata:
  name: borgwarehouse-ssh-external
  namespace: backup
  labels:
    app.kubernetes.io/name: borgwarehouse
spec:
  type: NodePort # 30000-32767
  ports:
    - name: borgwarehouse
      port: 30022
      targetPort: 30022
      nodePort: 30022
      protocol: TCP
  selector:
    app.kubernetes.io/name: borgwarehouse
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: borgwarehouse
  namespace: backup
  labels:
    app.kubernetes.io/name: borgwarehouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: borgwarehouse
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: backup
      labels:
        app.kubernetes.io/name: borgwarehouse
    spec:
      restartPolicy: Always
      containers:
        - name: borgwarehouse
          image: borgwarehouse/borgwarehouse:v2.1.0
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
             memory: 100Mi
          ports:
            - containerPort: 3000
              name: web
            - containerPort: 30022
              name: ssh
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: borgwarehouse-config
              mountPath: /home/borgwarehouse/app/config
            - name: borgwarehouse-ssh
              mountPath: /home/borgwarehouse/.ssh
            - name: borgwarehouse-ssh-host
              mountPath: /etc/ssh
            - name: borgwarehouse-logs
              mountPath: /home/borgwarehouse/logs
            - name: borgwarehouse-temp
              mountPath: /home/borgwarehouse/tmp
            - name: borg
              mountPath: /home/borgwarehouse/repos
      volumes:
        - name: borgwarehouse-config
          persistentVolumeClaim:
            claimName: borgwarehouse-config
        - name: borgwarehouse-ssh
          persistentVolumeClaim:
            claimName: borgwarehouse-ssh
        - name: borgwarehouse-ssh-host
          persistentVolumeClaim:
            claimName: borgwarehouse-ssh-host
        - name: borgwarehouse-logs
          persistentVolumeClaim:
            claimName: borgwarehouse-logs
        - name: borgwarehouse-temp
          persistentVolumeClaim:
            claimName: borgwarehouse-temp
        - name: borg
          persistentVolumeClaim:
            claimName: borg
